--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,188 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/styles.css">
     <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link href="https://unpkg.com/webkul-micron@1.1.6/dist/css/micron.min.css" type="text/css" rel="stylesheet">
+<script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
     <title>Zoo</title>
 </head>
+
 <body>
 
-<div id="app">
-
- 
-
+    <div id="app">
+            <!-- Mobile Menu -->
+            <div v-if="!showModal" class="mobileMenu sticky-menu sm:w-full h-14 flex flex-row justify-end lg:hidden">
+                <h1 class="text-center center-no-flex mt-2 font-petite-caps" style="    margin-left: 40px !important;
+                width: 100%;">Sherlock Zoo</h1>
+                <span id="show-modal" @click="showModal = true" class="material-icons flex self-center"
+                    style="font-size:2.5rem">
+                    menu
+                </span>
     
+            </div>
+
+        <div v-if="showModal"
+        class="overlay">
+        <span class="material-icons right-3 fixed z-1 text-white" id="show-modal" @click="showModal = false" style="font-size: 2.5rem;
+        top: 10px;">
+            clear
+            </span>
+        <div class="flex flex-column items-center list-none h-3/4 place-content-center">
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-white" href="visit.html">Visit</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-white" href="">Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-white" href="#">Animals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-white" href="zooAtHome.html">Zoo at Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-white" href="#">Donate</a>
+            </li>
+        </div>
+    </div>
+    <!--End Mobile Menu -->
+        <!-- Nav -->
+        <!-- <nav-bar class="absolute z-10 w-full"></nav-bar> -->
+        <ul class="nav justify-content-center py-2 absolute z-10 w-full bg-white sm:hidden" style="border-bottom-left-radius:50%;
+        border-bottom-right-radius:50%;">
+            <div>
+
+            </div>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-black" href="visit.html">Visit</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-black" href="">Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-black" href="#">Animals</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-black" href="zooAtHome.html">Zoo at Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-xl font-semibold text-black" href="#">Donate</a>
+            </li>
+        </ul>
+        <!-- End-Nav -->
+        <!-- Carousel-->
+        <banner-img class="bg-black"></banner-img>
+        <!-- End-Carousel-->
+        <heading-title title="Visit Our Animals" class="titleAnimate py-5 "></heading-title>
+
+        <div class="containerBox flex flex-row flex-wrap justify-center w-full ">
+            <!-- Visit Our Animals -->
+            <content-box title="Our Animals at Sherlock Zoo"
+                body="Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quibusdam animi, ab odio repellat magni!"
+                button="Find Out More" 
+                class=" lg:w-96 h-80 border-2 mx-2 sm: w-full sm: mb-2 max-w-sm">
+            </content-box>
+            <image-box style="background-image: url(/public/resources/carouse-img-4.jpg)"></image-box>
+            <image-box style="background-image: url(/public/resources/panda-animal.jpg)"></image-box>
+        </div>
+        <!-- End Visit Our Animals -->
+        <!-- Ways You Can Suport Us -->
+        <heading-title title="Ways you can support us" class="py-5 "></heading-title>
+
+        <div class="containerBox  flex flex-row flex-wrap justify-center w-full lg:mb-28 sm: h-3/4 sm: mb-60" >
+            <image-box-with-text title="You can Donate"
+                body="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus veritatis et quidem eligendi provident iusto."
+                button="Donate"
+                style="background-image: url(/public/resources/monkey-animal.jpg)" class="">
+            </image-box-with-text>
+            <image-box-with-text title="Online Gift Shop"
+                body="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus veritatis et quidem eligendi provident iusto. "
+                button="Start Shopping"
+                style="background-image: url(/public/resources/gift-img.jpg)"
+                class=" supportDivs">
+            </image-box-with-text>
+        </div>
+        <!-- End Ways You Can Suport Us -->
+        <!-- What We to do help Our Animals -->
+        <div class="h-96 flex flex-column flex-wrap justify-start w-full bg-fixed bg-no-repeat bg-center sm:flex flex-row h-auto bg-green-600 py-5"
+            style="background-image: url(/public/resources/what-we-do-background3.jpg)">
+
+            <heading-title title="What we do to help our animals" class="text-white text-center pt-5 pb-5">
+            </heading-title>
+            <h5 class="text-center lg:w-2/4 center text-white sm:w-full">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolores ut molestias laborum expedita. Ad, suscipit adipisci saepe sint corporis quos deleniti esse!
+                Quaerat suscipit error possimus maxime vel tempore rem.</h5>
+            <button class="center p-2 rounded-md mt-5 font-bold border border-1 text-white ">
+                Find Out More
+            </button>
+        </div>
+        <!-- End What We to do help Our Animals -->
+        <!-- Zoo At Home -->
+
+        <h3 class="bg-green-600 text-white w-64 text-center center justify-center relative rounded-md py-2"
+            style="top:5.5rem;">Zoo at home</h3>
+        <div
+            class="containerBox h-auto flex flex-row flex-wrap justify-center content-center w-full mt-16 py-5 "
+            style="background-color: #f1eba275;">
+
+            <div class="containerBox flex flex-row flex-wrap justify-center w-full lg:pt-20 sm: pt-0">
+                <image-box-with-title style="background-image: url(/public/resources/hedgehog-house.jpg)"
+                    title="Build a Hedgehog House">
+                </image-box-with-title>
+                <image-box-with-title title="Build a Bird House"
+                    style="background-image: url(/public/resources/bird-house.jpg)"></image-box-with-title>
+                <image-box-with-title title="Make Butterfly"
+                    style="background-image: url(/public/resources/butterfly-img.jpg); "></image-box-with-title>
+            </div>
+
+        </div>
+        <!--End Zoo At Home -->
+        <!--Zoo Events -->
+        <div
+            class="containerBox h-auto flex flex-row flex-wrap justify-around content-center lg:w-3/6 mb-28 py-20 float-left sm: w-full sm: mb-0"
+            style="background: #fb904a;">
+            <content-box-button-border title="Join our Spring Events"
+                body="Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad!" button="Find Out More"
+                class="w-4/5 h-80 border-2 mx-2 rounded-lg py-5 transform rotate-12 text-white">
+            </content-box-button-border>
+        </div>
+        <div
+            class="containerBox h-auto flex flex-row flex-wrap justify-around content-center lg:w-3/6 mb-28 py-20 float-left bg-blue-600 sm: w-full sm: mb-0">
+            <content-box-button-border title="Join our Winter Events"
+                body="Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ad!"
+                button="Find Out More"
+                class="w-4/5 h-80 border-2 mx-2 rounded-lg py-5 transform -rotate-12 text-white "
+                >
+            </content-box-button-border>
+
+        </div>
+        <!--End Zoo Events -->
+        <!-- Footer -->
+        <footer-bottom></footer-bottom>
+        <!-- End Footer -->
+    </div>
 
 
-</div>
 
-    
-
-<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> 
-<script src="/public/scripts.js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="/public/scripts.js/main.js"></script>
+    <script src="/public/scripts.js/animations.js"></script>
+    <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
