--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles.css">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="my-styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -55,6 +55,7 @@
         </div>
     </div>
     <!--End Mobile Menu -->
+
         <!-- Nav -->
         <!-- <nav-bar class="absolute z-10 w-full"></nav-bar> -->
         <ul class="nav justify-content-center py-2 absolute z-10 w-full bg-white sm:hidden" style="border-bottom-left-radius:50%;
@@ -94,8 +95,8 @@
                 button="Find Out More" 
                 class=" lg:w-96 h-80 border-2 mx-2 sm: w-full sm: mb-2 max-w-sm">
             </content-box>
-            <image-box style="background-image: url(/public/resources/carouse-img-4.jpg)"></image-box>
-            <image-box style="background-image: url(/public/resources/panda-animal.jpg)"></image-box>
+            <image-box style="background-image: url(./resources/carouse-img-4.jpg)"></image-box>
+            <image-box style="background-image: url(./resources/panda-animal.jpg)"></image-box>
         </div>
         <!-- End Visit Our Animals -->
         <!-- Ways You Can Suport Us -->
@@ -105,19 +106,19 @@
             <image-box-with-text title="You can Donate"
                 body="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus veritatis et quidem eligendi provident iusto."
                 button="Donate"
-                style="background-image: url(/public/resources/monkey-animal.jpg)" class="">
+                style="background-image: url(./resources/monkey-animal.jpg)" class="">
             </image-box-with-text>
             <image-box-with-text title="Online Gift Shop"
                 body="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus veritatis et quidem eligendi provident iusto. "
                 button="Start Shopping"
-                style="background-image: url(/public/resources/gift-img.jpg)"
+                style="background-image: url(./resources/gift-img.jpg)"
                 class=" supportDivs">
             </image-box-with-text>
         </div>
         <!-- End Ways You Can Suport Us -->
         <!-- What We to do help Our Animals -->
-        <div class="h-96 flex flex-column flex-wrap justify-start w-full bg-fixed bg-no-repeat bg-center sm:flex flex-row h-auto bg-green-600 py-5"
-            style="background-image: url(/public/resources/what-we-do-background3.jpg)">
+        <div class="h-96 flex flex-column flex-wrap justify-start w-full lg:bg-fixed lg:bg-no-repeat lg:bg-center sm:flex flex-row h-auto bg-green-600 lg:py-5 sm: py-20"
+            style="background-image: url(./resources/what-we-do-background3.jpg)">
 
             <heading-title title="What we do to help our animals" class="text-white text-center pt-5 pb-5">
             </heading-title>
@@ -138,13 +139,13 @@
             style="background-color: #f1eba275;">
 
             <div class="containerBox flex flex-row flex-wrap justify-center w-full lg:pt-20 sm: pt-0">
-                <image-box-with-title style="background-image: url(/public/resources/hedgehog-house.jpg)"
+                <image-box-with-title style="background-image: url(./resources/hedgehog-house.jpg)"
                     title="Build a Hedgehog House">
                 </image-box-with-title>
                 <image-box-with-title title="Build a Bird House"
-                    style="background-image: url(/public/resources/bird-house.jpg)"></image-box-with-title>
+                    style="background-image: url(./resources/bird-house.jpg)"></image-box-with-title>
                 <image-box-with-title title="Make Butterfly"
-                    style="background-image: url(/public/resources/butterfly-img.jpg); "></image-box-with-title>
+                    style="background-image: url(./resources/butterfly-img.jpg); "></image-box-with-title>
             </div>
 
         </div>
@@ -177,8 +178,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="/public/scripts.js/main.js"></script>
-    <script src="/public/scripts.js/animations.js"></script>
+    <script src="scripts.js/main.js"></script>
+    <script src="scripts.js/animations.js"></script>
     <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
