--- a/public/visit.html
+++ b/public/visit.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles.css">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="my-styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Visit</title>
+    <title>Sherlock Zoo</title>
 </head>
 
 <body>
@@ -87,7 +87,7 @@
         <!-- Banner -->
         <static-carousel-banner title="Visit Our Animals"
             body="Nulla vitae elit libero, a pharetra augue mollis interdum."
-            style="background-image: url(/public/resources/visit-banner.jpg)" class="bg-center">
+            style="background-image: url(./resources/visit-banner.jpg)" class="bg-center">
         </static-carousel-banner>
         <!-- End Banner -->
         <!-- Visit -->
@@ -116,28 +116,28 @@
         </div>
         <!-- End Tickets Table -->
         <!-- Things to do At Zoo -->
-        <div class="containerBox mobileParallax h-auto flex flex-row flex-wrap justify-around content-center w-full mb-20 float-left bg-repeat-round bg-fixed "
-            style="background-image: url(/public/resources/what-we-do-background3.jpg);">
+        <div class="h-96 flex flex-column flex-wrap justify-start w-full lg:bg-fixed lg:bg-no-repeat lg:bg-center sm:flex flex-row h-auto bg-green-600 py-5 "
+            style="background-image: url(./resources/what-we-do-background3.jpg);">
             <content-box-button-border title="What's Here ?" body="Explore things to do at Sharlock Zoo!"
-                button="Find Out More" class="w-4/5 h-80  py-5 text-white">
+                button="Find Out More" class="lg:w-4/5 h-80  py-5 text-white sm: full">
             </content-box-button-border>
         </div>
 
         <div class="containerBox flex flex-row flex-wrap justify-center w-full mt-20">
-            <image-box-with-title style="background-image: url(/public/resources/zoo-bingo-img.jpg)" title="Zoo Bingo">
+            <image-box-with-title style="background-image: url(./resources/zoo-bingo-img.jpg)" title="Zoo Bingo">
             </image-box-with-title>
             <image-box-with-title title="Scavenger Hunt"
-                style="background-image: url(/public/resources/zoo-scavenger-hunt.jpg)"></image-box-with-title>
+                style="background-image: url(./resources/zoo-scavenger-hunt.jpg)"></image-box-with-title>
             <image-box-with-title title="Feed the Animals"
-                style="background-image: url(/public/resources/zoo-feed-animals.jpg); "></image-box-with-title>
+                style="background-image: url(./resources/zoo-feed-animals.jpg); "></image-box-with-title>
         </div>
         <div class="containerBox flex flex-row flex-wrap justify-center w-full mt-10">
-            <image-box-with-title style="background-image: url(/public/resources/zoo-bingo-img.jpg)" title="Zoo Bingo">
+            <image-box-with-title style="background-image: url(./resources/zoo-bingo-img.jpg)" title="Zoo Bingo">
             </image-box-with-title>
             <image-box-with-title title="Scavenger Hunt"
-                style="background-image: url(/public/resources/zoo-scavenger-hunt.jpg)"></image-box-with-title>
+                style="background-image: url(./resources/zoo-scavenger-hunt.jpg)"></image-box-with-title>
             <image-box-with-title title="Feed the Animals"
-                style="background-image: url(/public/resources/zoo-feed-animals.jpg); "></image-box-with-title>
+                style="background-image: url(./resources/zoo-feed-animals.jpg); "></image-box-with-title>
         </div>
         <!-- End Things to do at Zoo -->
 
@@ -152,7 +152,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="/public/scripts.js/main.js"></script>
+    <script src="scripts.js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
